Fix issue collapse doesn't work

--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1488,10 +1488,8 @@ output {
 .page-eligibility .form-actions {
     padding: 0 15px 20px;
 }
-#monthly-commmitement-body{
-    margin-top: 15px;
-}
-#monthly-commmitement-body .form-inline{
+#monthly-commmitement-body .form-inline,
+.sm-margin-bottom {
     margin-bottom: 15px;
 }
 #monthly-commmitement-body .form-inline .control-label{
